--- a/package.json
+++ b/package.json
@@ -5,14 +5,23 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --watch"
   },
   "dependencies": {
+    "@testing-library/react": "^12.1.2",
+    "bootstrap": "^5.1.3",
+    "bootswatch": "^5.1.3",
+    "jest": "^27.5.1",
     "next": "12.0.10",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-bootstrap": "^2.1.2",
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.27.0",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
+    "@types/jest": "^27.4.0",
     "@types/node": "17.0.17",
     "@types/react": "17.0.39",
     "eslint": "8.9.0",
